# OpenGLtest

./: CMakeLists.txt  README.md
include/glad/: glad.h
include/learnopengl/: camera.h
src/: glad.c  myMain.cpp  texture.fs
src/1/: myMain.cpp
src/2/: myMain_light.cpp
src/shaders/: colors.fs  transform.fs  transform.vs
